--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+# VITE_RAPID_API_KEY = "413d45fe78mshe7da2066174f654p15a2a3jsne332b879dc2c"
 VITE_RAPID_API_KEY = "413d45fe78mshe7da2066174f654p15a2a3jsne332b879dc2c"
